[package]
name = "vylfs"
version = "0.1.0"
authors = ["sapphiregaze"]
description = "A Modern Encrypted Filesystem For FUSE That Conceals File Metadata"
edition = "2021"

[dependencies]
clap = "4.5.37"
fuser = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
