[package]
name = "vylfs"
version = "0.1.0"
authors = ["sapphiregaze"]
description = "A Modern Encrypted Virtual Filesystem That Conceals Metadata"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = "debuginfo"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = "4.5.37"
daemonize = "0.5.0"
fuser = "0.15.1"
libc = "0.2.172"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
